# wagtail-wordpress-import

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  testmanage.py  tox.ini
.github/workflows/: test.yml
docs/: block_shortcodes.md  blockbuilder.md  categories.md  development.md  import_hooks.md  long_description.md  tooling.md
src/wagtail_wordpress_import/: blocks.py  wagtail_hooks.py  xml_boilerplate.py
src/wagtail_wordpress_import/importers/: wordpress.py
src/wagtail_wordpress_import/management/commands/: analyze_xml_content.py  delete_imported_pages.py  import_xml.py  reduce_xml.py
src/wagtail_wordpress_import/prefilters/: handle_shortcodes.py
tests/: apps.py  models.py  settings.py  test_bleach.py  test_block_builder.py  test_commands.py  test_functions.py  test_import_hooks_items.py  test_import_hooks_tags.py  test_inline_shortcode_handlers.py  test_linebreaks_wp.py  test_shortcode_handlers.py  test_transform_styles_filter.py  test_utility_functions.py  test_wordpress_importer.py  test_wordpress_item.py  test_xml_boilerplate.py  xml_boilerplate.py
tests/migrations/: 0001_initial.py
wagtail_wordpress_import/: block_builder.py  block_builder_defaults.py  logger.py  models.py  xml_boilerplate.py
wagtail_wordpress_import/importers/: wordpress.py
wagtail_wordpress_import/management/commands/: delete_imported_pages.py  reduce_xml.py
wagtail_wordpress_import/prefilters/: handle_shortcodes.py  transform_styles_filter.py
wagtail_wordpress_import/test/: models.py  settings.py  urls.py
wagtail_wordpress_import/test/migrations/: 0001_initial.py
wagtail_wordpress_import/test/tests/: test_block_builder.py  test_import_hooks_items.py  test_inline_shortcode_handlers.py  test_linebreaks_wp.py  test_wordpress_importer.py  test_xml_boilerplate.py  xml_boilerplate.py
